Remove dependency on devscripts-el
The devscripts-el package is broken (Trac: 1468), so we remove it.
Anyone who actually wants to run debuild inside emacs should go
install it themselves.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-debathena-debian-dev (0.6) UNRELEASED; urgency=low
+debathena-debian-dev (0.6) unstable; urgency=low
 
   * Do not depend on dpatch, because it's obsolete (Trac: #1472)
+  * Do not depend on devscripts-el, because it's broken. (Trac: #1468)
 
- -- Jonathan Reed <jdreed@mit.edu>  Thu, 22 May 2014 14:41:45 -0400
+ -- Jonathan Reed <jdreed@mit.edu>  Thu, 22 May 2014 14:42:33 -0400
 
 debathena-debian-dev (0.5) unstable; urgency=low
 
